# bt-dbus-test

./: Android.mk  CMakeLists.txt  all.h  dbusplusplus.cpp  main.cpp  manager.h  org.bluez.all.xml  raw.cpp
cmake_modules/: FindDBus.cmake  FindGlib.cmake
